@@ -501,6 +501,10 @@ package body XE_Back is
             Value := Get_Variable_Value (Variable_Id (Parameter));
             Protocol_Data := Get_Node_Name (Node_Id (Value));
 
+         when Pragma_Version =>
+            Value := Get_Variable_Value (Variable_Id (Parameter));
+            Version_Checks := Convert (Get_Variable_Mark (Value));
+
          when Pragma_Unknown =>
             null;
 
